  -- LarryK rev 1909
* Added "orthogonal view offset" concept in bands, which is for supporting dragging vertically 
  on horizontal timelines, and dragging horizontally on vertical timelines. The original
  event painter and the compact event painter make use of this new concept. The compact painter
  example is updated to demonstrate this feature.
  
    
Version 2.3.1
* timeline-api.js now uses
  http://api.simile-widgets.org/ajax/2.2.1/simile-ajax-api.js

Version 2.3.0
* Added test 5, really long labels, to test example page rev 1601, LarryK
* Added tags/latest, a copy of the latest tagged release. Will be used for
  referring to examples and other source files from the wiki. This way
  the wiki references will not need to be updated for each release.
* Added test example page for trying and testing event attributes
  src/webapp/examples/test_example/test.html -- LarryK rev 1598
* Fixed issues caused when events don't have title attribute.
  Issue tracker #20 -- LarryK rev 1598
* Event tape heights now use theme.event.tape.height. Better than using css since:
  theme.event.track.height & theme.event.tape.height need to work with each other.
  It is easier and clearer to set both in the same place (the theme), rather than
  one in the theme and one in the css. This is a breaking change if you were 
  setting the height in the css. People were having problems with this in the
  mailing list.

  Further note about this change since it is undoing someone's work: The tape height
  on the screen was defined purely by css. But the tape height from the theme was
  still being used (to some extent) in the sw. In particular, the Theme's tape height
  is returned by function _paintEventTape in file original-painter. It doesn't make
  sense for the theme's tape height to be returned by the function when the 
  actual height of the tape was being controlled in the css file.
  -- LarryK rev 1623
* Un-commented-out 
  div.style.background = color;